added min_size to locale

--- a/config/locales/en/dry.yml
+++ b/config/locales/en/dry.yml
@@ -1,5 +1,6 @@
 en:
   dry:
     errors:
-      key?: 'required'
-      filled?: 'required'
+      key?: required
+      filled?: required
+      min_size?: too_short
